--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "build":"sucrase ./src -d ./dist --transforms imports",
+    "dev": "nodemon src/server.js",
+    "build": "sucrase ./src -d ./dist --transforms imports",
     "start": "node dist/server.js"
   },
   "repository": "https://github.com/mateusamarall/api-rest-cursojs.git",
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.3.1",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.1",
     "multer": "^1.4.2",
